--- a/dango/httpd/Cargo.toml
+++ b/dango/httpd/Cargo.toml
@@ -15,10 +15,10 @@ async-graphql           = { workspace = true }
 async-graphql-actix-web = { workspace = true }
 chrono                  = { workspace = true }
 clap                    = { workspace = true }
-dango-indexer-sql       = { workspace = true }
+dango-indexer-sql       = { workspace = true, features = ["async-graphql"] }
 dango-types             = { workspace = true, features = ["async-graphql"] }
 indexer-httpd           = { workspace = true }
-indexer-sql             = { workspace = true }
+indexer-sql             = { workspace = true, features = ["async-graphql"] }
 itertools               = { workspace = true }
 sea-orm                 = { workspace = true }
 serde                   = { workspace = true }
