--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,6 +112,7 @@ home                    = "0.5"
 ics23                   = "0.12"
 itertools               = "0.14"
 k256                    = "0.13"
+libp2p                  = "0.55"
 libp2p-identity         = "0.2"
 lzma-rs                 = "0.3"
 num_cpus                = "1"
@@ -162,12 +163,32 @@ wasmer                  = "5" # keep at v5 because there's license change for v6
 wasmer-middlewares      = "5" # keep at v5 because there's license change for v6
 
 # Malachite
-malachitebft-app          = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-app" }
-malachitebft-core-types   = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-core-types" }
-malachitebft-engine       = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-engine" }
-malachitebft-metrics      = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-metrics" }
-malachitebft-sync         = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-sync" }
-malachitebft-test-mempool = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-test-mempool" }
+# malachitebft-app          = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-app" }
+# malachitebft-config       = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-config" }
+# malachitebft-core-types   = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-core-types" }
+# malachitebft-engine       = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-engine" }
+# malachitebft-metrics      = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-metrics" }
+# malachitebft-network      = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-network" }
+# malachitebft-sync         = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-sync" }
+# malachitebft-test-mempool = { git = "https://github.com/informalsystems/malachite", rev = "2ddbbd8", package = "informalsystems-malachitebft-test-mempool" }
+
+malachitebft-app          = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-app" }
+malachitebft-config       = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-config" }
+malachitebft-core-types   = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-core-types" }
+malachitebft-engine       = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-engine" }
+malachitebft-metrics      = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-metrics" }
+malachitebft-network      = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-network" }
+malachitebft-sync         = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-sync" }
+malachitebft-test-mempool = { git = "https://github.com/left-curve/malachite", branch = "rhaki/borsh", package = "informalsystems-malachitebft-test-mempool" }
+
+# malachitebft-app          = { path = "../lmalachite/code/crates/app", package = "informalsystems-malachitebft-app" }
+# malachitebft-config       = { path = "../lmalachite/code/crates/config", package = "informalsystems-malachitebft-config" }
+# malachitebft-core-types   = { path = "../lmalachite/code/crates/core-types", package = "informalsystems-malachitebft-core-types" }
+# malachitebft-engine       = { path = "../lmalachite/code/crates/engine", package = "informalsystems-malachitebft-engine" }
+# malachitebft-metrics      = { path = "../lmalachite/code/crates/metrics", package = "informalsystems-malachitebft-metrics" }
+# malachitebft-network      = { path = "../lmalachite/code/crates/network", package = "informalsystems-malachitebft-network" }
+# malachitebft-sync         = { path = "../lmalachite/code/crates/sync", package = "informalsystems-malachitebft-sync" }
+# malachitebft-test-mempool = { path = "../lmalachite/code/crates/test/mempool", package = "informalsystems-malachitebft-test-mempool" }
 
 # Left curve packages
 dango-account-factory       = { path = "dango/account/factory" }
