--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -87,8 +87,7 @@ jobs:
           set -euo pipefail
           for crate in $(cargo metadata --format-version=1 --no-deps | jq -r '.packages[].name'); do
             echo "Checking $crate..."
-            cargo check -p "$crate" --all-targets --no-default-features
-            cargo clippy --bins --tests --benches --examples --no-default-features --all-targets -- -D warnings
+            cargo clippy -p "$crate" --bins --tests --benches --examples --no-default-features --all-targets -- -D warnings
           done
 
   test:
