--- a/grug/malachite/Cargo.toml
+++ b/grug/malachite/Cargo.toml
@@ -18,6 +18,7 @@ grug-crypto     = { workspace = true }
 k256            = { workspace = true }
 libp2p-identity = { workspace = true, features = ["secp256k1"] }
 prost           = { workspace = true }
+prost-types     = { workspace = true }
 ractor          = { workspace = true }
 serde           = { workspace = true }
 tokio           = { workspace = true }
