--- a/networks/localdango/monitoring/prometheus/prometheus.yml
+++ b/networks/localdango/monitoring/prometheus/prometheus.yml
@@ -21,6 +21,10 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  - job_name: 'cometbft'
+    static_configs:
+      - targets: ['cometbft:26660']
+
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter:9100']
