--- a/dango/mocks/httpd/Cargo.toml
+++ b/dango/mocks/httpd/Cargo.toml
@@ -20,6 +20,7 @@ grug-db-memory          = { workspace = true }
 grug-testing            = { workspace = true }
 grug-types              = { workspace = true }
 grug-vm-rust            = { workspace = true }
+hyperlane-testing       = { workspace = true }
 indexer-httpd           = { workspace = true, features = ["testing", "tracing"] }
 indexer-sql             = { workspace = true, features = ["tracing"] }
 tokio                   = { workspace = true }
