exhaustively list cargo workspace members (without using wildcard `*`)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 members = [
-  "dango/account/*",
+  "dango/account/factory",
+  "dango/account/margin",
+  "dango/account/multi",
+  "dango/account/spot",
   "dango/auth",
   "dango/bank",
   "dango/cli",
@@ -12,7 +15,7 @@ members = [
   "dango/indexer/sql",
   "dango/indexer/sql-migration",
   "dango/lending",
-  "dango/mocks/*",
+  "dango/mocks/httpd",
   "dango/oracle",
   "dango/proposal-preparer",
   "dango/taxman",
@@ -24,26 +27,36 @@ members = [
   "grug/bob-the-builder",
   "grug/client",
   "grug/crypto",
-  "grug/db/*",
+  "grug/db/disk",
+  "grug/db/memory",
   "grug/ffi",
   "grug/jellyfish-merkle",
   "grug/macros",
   "grug/math",
-  "grug/mocks/*",
+  "grug/mocks/account",
+  "grug/mocks/bank",
+  "grug/mocks/taxman",
   "grug/std",
   "grug/storage",
   "grug/tester",
   "grug/testing",
   "grug/types",
-  "grug/vm/*",
-  "hyperlane/isms/*",
+  "grug/vm/rust",
+  "grug/vm/wasm",
+  "hyperlane/isms/multisig",
   "hyperlane/mailbox",
   "hyperlane/testing",
   "hyperlane/va",
-  "indexer/*",
+  "indexer/client",
+  "indexer/disk-saver",
+  "indexer/httpd",
+  "indexer/sql",
+  "indexer/sql-migration",
+  "indexer/testing",
   "pyth/client",
   "pyth/types",
-  "utils/*",
+  "utils/config-parser",
+  "utils/dyn-event",
 ]
 resolver = "2"
 
