--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     ports:
       - 127.0.0.1:8080:8080
     volumes:
-      - ./configs/dango/config:/home/dango/.dango/config
-      - ./data/dango/data:/home/dango/.dango/data
-      - ./data/dango/indexer:/home/dango/.dango/indexer
+      - ./configs/dango/config:/root/.dango/config
+      - ./data/dango/data:/root/.dango/data
+      - ./data/dango/indexer:/root/.dango/indexer
     environment:
       - DB_HOST=db
       - DB_PORT=5432
