--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -280,22 +280,48 @@ jobs:
         run: |
           docker run --rm ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} dango || true
 
+  localdango:
+    timeout-minutes: 5
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [amd64, arm64]
+        runner:
+          [self-hosted]
+    name: Testing localdango with ${{ matrix.arch }} on ${{ join(matrix.runner, ', ') }}
+    runs-on: ${{ matrix.runner }}
+    needs: [test]
+    permissions:
+      packages: read
+    env:
+      DANGO_TAG: ${{ env.GIT_COMMIT }}-${{ matrix.arch }}
+      COMETBFT_TAG: v0.38.17.1
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: docker/setup-buildx-action@v3
+
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Ensure localdango works
         run: |
           cd networks/localdango
-          export DANGO_TAG=${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }}
-          just start
+          timeout 30 just start
 
-          # Wait for 3 services to be ready
-          timeout 30 bash -c 'until [ $(docker compose ps | grep -c "Up") -eq 3 ]; do sleep 5; done'
-
-          # Check if timeout failed
-          if [ $? -ne 0 ]; then
-            echo "Services failed to start within timeout"
-            docker compose ps
-            docker compose logs
-            exit 1
-          fi
+          # #  Wait for 3 services to be ready
+          # timeout 30 bash -c 'until [ $(docker compose ps | grep -c "Up") -eq 3 ]; do sleep 5; done'
+          #
+          # # Check if timeout failed
+          # if [ $? -ne 0 ]; then
+          #   echo "Services failed to start within timeout"
+          #   docker compose ps
+          #   docker compose logs
+          #   exit 1
+          # fi
 
   push-manifest:
     permissions:
@@ -316,14 +342,14 @@ jobs:
             --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-amd64 \
             --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-arm64
 
-          docker manifest push ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}
+          docker manifest push --purge ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}
 
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             docker manifest create ghcr.io/left-curve/left-curve/dango:latest \
               --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-amd64 \
               --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-arm64
 
-            docker manifest push ghcr.io/left-curve/left-curve/dango:latest
+            docker manifest push --purge ghcr.io/left-curve/left-curve/dango:latest
           fi
 
   deploy-dango:
