--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -25,8 +25,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      # cometbft:
-      #   condition: service_healthy
     ports:
       - 127.0.0.1:8080:8080
     volumes:
@@ -47,10 +45,9 @@ services:
       retries: 3
 
   cometbft:
-    image: ghcr.io/left-curve/left-curve/cometbft:v0.38.17
+    image: ghcr.io/left-curve/left-curve/cometbft:${COMETBFT_TAG:-v0.38.17}
     depends_on:
-      dango:
-        condition: service_healthy
+      - dango
     ports:
       - 127.0.0.1:26657:26657
     volumes:
