--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -42,7 +42,7 @@ jobs:
 
   build-cometbft:
     needs: check-image
-    # if: needs.check-image.outputs.skip_build == 'false'
+    if: needs.check-image.outputs.skip_build == 'false'
     permissions:
       packages: write
     runs-on: self-hosted
