--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -280,54 +280,6 @@ jobs:
         run: |
           docker run --rm ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} dango || true
 
-  localdango:
-    timeout-minutes: 5
-    strategy:
-      fail-fast: false
-      # max-parallel: 1
-      matrix:
-        arch: [amd64, arm64]
-        runner:
-          [self-hosted]
-    name: Testing localdango with ${{ matrix.arch }} on ${{ join(matrix.runner, ', ') }}
-    runs-on: ${{ matrix.runner }}
-    needs: [build]
-    permissions:
-      packages: read
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: docker/setup-buildx-action@v3
-
-      - uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Ensure localdango works
-        env:
-          DANGO_TAG: ${{ env.GIT_COMMIT }}-${{ matrix.arch }}
-          POSTGRES_PORT: ${{ matrix.arch == 'amd64' && '5432' || '6432' }}
-          DANGO_PORT: ${{ matrix.arch == 'amd64' && '8080' || '9080' }}
-          COMETBFT_PORT: ${{ matrix.arch == 'amd64' && '26657' || '36657' }}
-          COMETBFT_TAG: v0.38.17
-          COMPOSE_PROJECT_NAME: localdango-${{ matrix.arch }}
-        run: |
-          cd networks/localdango
-          timeout 30 just start
-
-          # #  Wait for 3 services to be ready
-          # timeout 30 bash -c 'until [ $(docker compose ps | grep -c "Up") -eq 3 ]; do sleep 5; done'
-          #
-          # # Check if timeout failed
-          # if [ $? -ne 0 ]; then
-          #   echo "Services failed to start within timeout"
-          #   docker compose ps
-          #   docker compose logs
-          #   exit 1
-          # fi
-
   push-manifest:
     permissions:
       packages: write
@@ -356,6 +308,47 @@ jobs:
 
             docker manifest push --purge ghcr.io/left-curve/left-curve/dango:latest
           fi
+
+  localdango:
+    timeout-minutes: 5
+    name: Testing localdango
+    runs-on: [self-hosted]
+    needs: [push-manifest]
+    permissions:
+      packages: read
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: docker/setup-buildx-action@v3
+
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Ensure localdango works
+        env:
+          DANGO_TAG: ${{ env.GIT_COMMIT }}
+          POSTGRES_PORT: 0
+          DANGO_PORT: 0
+          COMETBFT_PORT: 0
+          COMETBFT_TAG: v0.38.17
+          # COMPOSE_PROJECT_NAME: localdango
+        run: |
+          cd networks/localdango
+          timeout 30 just start
+
+          # #  Wait for 3 services to be ready
+          # timeout 30 bash -c 'until [ $(docker compose ps | grep -c "Up") -eq 3 ]; do sleep 5; done'
+          #
+          # # Check if timeout failed
+          # if [ $? -ne 0 ]; then
+          #   echo "Services failed to start within timeout"
+          #   docker compose ps
+          #   docker compose logs
+          #   exit 1
+          # fi
 
   deploy-dango:
     if: github.ref == 'refs/heads/main'
