Ensure data folder is deleted

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -349,6 +349,12 @@ jobs:
           #   docker compose logs
           #   exit 1
           # fi
+      - name: Cleanup
+        if: always()
+        run: |
+          cd networks/localdango
+          docker compose down -v || true
+          sudo rm -rf data/ || true
 
   deploy-dango:
     if: github.ref == 'refs/heads/main'
