--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       # For security reasons, postgres should only accept connections from localhost.
       - 127.0.0.1:${POSTGRES_PORT:-5432}:5432
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
       # For when we'll need an init script ran at initialization
       # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
@@ -31,8 +31,8 @@ services:
       - 127.0.0.1:${DANGO_PORT:-8080}:8080
     volumes:
       - ./configs/dango/config:/root/.dango/config
-      - ./data/dango/data:/root/.dango/data
-      - ./data/dango/indexer:/root/.dango/indexer
+      - dango_data:/root/.dango/data
+      - dango_indexer:/root/.dango/indexer
     environment:
       - DB_HOST=db
       - DB_PORT=5432
@@ -56,7 +56,7 @@ services:
       - 127.0.0.1:${COMETBFT_PORT:-26657}:26657
     volumes:
       - ./configs/cometbft/config:/home/cometbft/.cometbft/config
-      - ./data/cometbft/data:/home/cometbft/.cometbft/data
+      - cometbft_data:/home/cometbft/.cometbft/data
     tty: true
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:26657/up"]
@@ -69,3 +69,9 @@ services:
 networks:
   dango:
     driver: bridge
+
+volumes:
+  db_data:
+  dango_data:
+  dango_indexer:
+  cometbft_data:
