--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -47,9 +47,14 @@ services:
   cometbft-init:
     image: ghcr.io/left-curve/left-curve/cometbft:${COMETBFT_TAG:-v0.38.17}
     volumes:
-      - ./data/cometbft/data:/source:ro
       - cometbft_data:/target
-    command: sh -c "cp -rn /source/* /target/ 2>/dev/null || true"
+    command: >
+      sh -c "
+      if [ ! -f /target/priv_validator_state.json ]; then
+        mkdir -p /target &&
+        echo '{\"height\":\"0\",\"round\":0,\"step\":0}' > /target/priv_validator_state.json
+      fi
+      "
 
   cometbft:
     image: ghcr.io/left-curve/left-curve/cometbft:${COMETBFT_TAG:-v0.38.17}
@@ -63,7 +68,7 @@ services:
       - cometbft_data:/root/.cometbft/data
     tty: true
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:26657/up"]
+      test: ["CMD", "curl", "-f", "http://localhost:26657/health"]
       interval: 10s
       timeout: 5s
       retries: 3
