--- a/dango/oracle/Cargo.toml
+++ b/dango/oracle/Cargo.toml
@@ -25,3 +25,4 @@ grug          = { workspace = true }
 pyth-types    = { workspace = true }
 
 [dev-dependencies]
+test-case     = { workspace = true }
