--- a/grug/db/disk/Cargo.toml
+++ b/grug/db/disk/Cargo.toml
@@ -18,6 +18,7 @@ grug-jmt   = { workspace = true }
 grug-types = { workspace = true }
 ics23      = { workspace = true, optional = true }
 rocksdb    = { workspace = true }
+sha2       = { workspace = true }
 tempfile   = { workspace = true }
 thiserror  = { workspace = true }
 
