--- a/dango/indexer/httpd/Cargo.toml
+++ b/dango/indexer/httpd/Cargo.toml
@@ -17,7 +17,7 @@ chrono                  = { workspace = true }
 clap                    = { workspace = true }
 dango-indexer-sql       = { workspace = true, features = ["async-graphql"] }
 dango-types             = { workspace = true, features = ["async-graphql"] }
-indexer-httpd           = { workspace = true }
+indexer-httpd           = { workspace = true, features = ["metrics", "tracing"] }
 indexer-sql             = { workspace = true, features = ["async-graphql"] }
 itertools               = { workspace = true }
 sea-orm                 = { workspace = true }
