Add feature flag

--- a/dango/indexer/httpd/Cargo.toml
+++ b/dango/indexer/httpd/Cargo.toml
@@ -9,6 +9,9 @@ repository    = { workspace = true }
 rust-version  = { workspace = true }
 version       = { workspace = true }
 
+[features]
+metrics = ["dep:metrics", "indexer-httpd/metrics"]
+
 [dependencies]
 actix-web               = { workspace = true }
 async-graphql           = { workspace = true }
@@ -17,9 +20,10 @@ chrono                  = { workspace = true }
 clap                    = { workspace = true }
 dango-indexer-sql       = { workspace = true, features = ["async-graphql"] }
 dango-types             = { workspace = true, features = ["async-graphql"] }
-indexer-httpd           = { workspace = true, features = ["metrics", "tracing"] }
+indexer-httpd           = { workspace = true, features = ["tracing"] }
 indexer-sql             = { workspace = true, features = ["async-graphql"] }
 itertools               = { workspace = true }
+metrics                 = { workspace = true, optional = true }
 sea-orm                 = { workspace = true }
 serde                   = { workspace = true }
 thiserror               = { workspace = true }
